--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,11 @@
 
 <body>
   <div class="main_container">
-    <ul class="toolbar">
+    <ul class="top_toolbar">
+      <li><a href="#home">File</a></li>
+      <li><a href="#about">About</a></li>
+    </ul>
+    <ul class="left_toolbar">
       <li class="action create_table"></li>
       <li class="action create_relation"></li>
     </ul>
