added styling to create table dialog

--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,9 @@
         <table>
           <thead>
             <tr>
+              <th colspan="3">Columns</th>
+            </tr>
+            <tr>
               <th>Name</th>
               <th>Type</th>
             </tr>
@@ -50,8 +53,6 @@
             </tr>
           </tbody>
         </table>
-      </div>
-      <div>
         <button>Add column</button>
       </div>
       <menu>
