--- a/src/index.html
+++ b/src/index.html
@@ -20,44 +20,51 @@
   <input type="file" id="file_open" style="display:none" accept="application/json" />
 
   <dialog id="create_edit_dialog">
-    <h3>Create Table</h3>
+    <h3 id="dialog_title"></h3>
     <form method="dialog">
       <div>
         <label>Name:
-          <input type="text" />
+          <input type="text" id="name_input" />
         </label>
       </div>
       <div>
         <table>
           <thead>
             <tr>
-              <th colspan="3">Columns</th>
+              <th>Columns</th>
             </tr>
             <tr>
               <th>Name</th>
               <th>Type</th>
+              <th>PK</th>
             </tr>
           </thead>
-          <tbody>
-            <tr>
-              <td><input type="text"/></td>
-              <td>
-                <select>
-                  <option>Int</option>
-                  <option>String</option>
-                </select>
-              </td>
-              <td>
-                <button>Remove</button>
-              </td>
-            </tr>
+          <tbody id="columns">
           </tbody>
         </table>
         <button>Add column</button>
       </div>
+      <div>
+        <table>
+          <thead>
+            <tr>
+              <th>Foreign Key Columns</th>
+            </tr>
+            <tr>
+              <th>Name</th>
+              <th>PK</th>
+              <th>Foreign Table</th>
+              <th>Foreign Column</th>
+            </tr>
+          </thead>
+          <tbody id="fk_columns">
+          </tbody>
+        </table>
+        <button>Add relation</button>
+      </div>
       <menu>
         <button>Cancel</button>
-        <button>Create</button>
+        <button id="create_edit_button"></button>
       </menu>
     </form>
   </dialog>
