fix eslint, moved dialog inside new component

--- a/src/index.html
+++ b/src/index.html
@@ -13,69 +13,13 @@
   <link rel="stylesheet" type="text/css" href="./style.css">
   <script type="module" src="../node_modules/db_designer_core/src/index.js"></script>
   <script type="module" src="../node_modules/menu-bar-component/src/menu_bar.js"></script>
+  <script type="module" src="../src/table-dialog-component/TableDialogComponent.js"></script>
 
 </head>
 
 <body>
   <input type="file" id="file_open" style="display:none" accept="application/json" />
-
-  <dialog id="create_edit_dialog">
-    <h3 id="dialog_title"></h3>
-    <form method="dialog">
-      <div>
-        <label>Name:
-          <input type="text" id="name_input" required/>
-        </label>
-      </div>
-      <div>
-        <table>
-          <thead>
-            <tr>
-              <th>Columns</th>
-            </tr>
-            <tr>
-              <th>Name</th>
-              <th>Type</th>
-              <th>PK</th>
-              <th>UQ</th>
-              <th>NN</th>
-            </tr>
-          </thead>
-          <tbody id="columns">
-          </tbody>
-        </table>
-        <button>Add column</button>
-      </div>
-      <div>
-        <table>
-          <thead>
-            <tr>
-              <th>Foreign Key Columns</th>
-            </tr>
-            <tr>
-              <th>Name</th>
-              <th>PK</th>
-              <th>UQ</th>
-              <th>NN</th>
-              <th>Foreign Table</th>
-              <th>Foreign Column</th>
-            </tr>
-          </thead>
-          <tbody id="fk_columns">
-          </tbody>
-        </table>
-        <button>Add relation</button>
-      </div>
-      <div class="errors">
-
-      </div>
-      <menu>
-        <button id="cancel">Cancel</button>
-        <button id="create_edit_button"></button>
-      </menu>
-    </form>
-  </dialog>
-
+  <table-dialog></table-dialog>
   <div class="main_container">
     <menu-bar></menu-bar>
     <ul class="left_toolbar">
