added validation schema, added comments, many improvements to table dialog

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,8 @@
   <meta name="web" content="yes">
   <link rel="manifest" href="../manifest.json">
 
+  <script src="/node_modules/ajv/dist/ajv.min.js"></script>
+
   <script type="module" src="./script.js"></script>
   <link rel="stylesheet" type="text/css" href="../node_modules/normalize.css/normalize.css">
   <link rel="stylesheet" type="text/css" href="./style.css">
