--- a/src/index.html
+++ b/src/index.html
@@ -6,16 +6,16 @@
 
   <meta charset="UTF-8">
   <meta name="web" content="yes">
-  <link rel="manifest" href="../manifest.json">
+  <link rel="manifest" href="/manifest.json">
 
   <script src="/node_modules/ajv/dist/ajv.min.js"></script>
 
   <script type="module" src="./script.js"></script>
-  <link rel="stylesheet" type="text/css" href="../node_modules/normalize.css/normalize.css">
+  <link rel="stylesheet" type="text/css" href="/node_modules/normalize.css/normalize.css">
   <link rel="stylesheet" type="text/css" href="./style.css">
-  <script type="module" src="../node_modules/db_designer_core/src/index.js"></script>
-  <script type="module" src="../node_modules/menu-bar-component/src/menu_bar.js"></script>
-  <script type="module" src="../src/table-dialog-component/TableDialogComponent.js"></script>
+  <script type="module" src="/node_modules/db_designer_core/src/index.js"></script>
+  <script type="module" src="/node_modules/menu-bar-component/src/menu_bar.js"></script>
+  <script type="module" src="./table-dialog-component/TableDialogComponent.js"></script>
 
 </head>
 
