--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
   <meta charset="UTF-8">
   <meta name="web" content="yes">
+  <meta name="google-site-verification" content="iokRTHiu7RMWhhMjXGqZK3bch01u9rp6sgydiq2ghyE" />
 
 </head>
 
